# dde-api-proxy

./: .gitignore  CMakeLists.txt
.reuse/: dep5
debian/: changelog  control  rules
misc/: CMakeLists.txt
misc/dbus/services/: com.deepin.SessionManager.service  com.deepin.WMSwitcher.service  com.deepin.api.XEventMonitor.service  com.deepin.daemon.Appearance.service  com.deepin.daemon.Audio.service  com.deepin.daemon.Bluetooth.service  com.deepin.daemon.Display.service  com.deepin.daemon.InputDevices.service  com.deepin.daemon.Keybinding.service  com.deepin.daemon.LangSelector.service  com.deepin.daemon.Mime.service  com.deepin.daemon.Network.service  com.deepin.daemon.Power.service  com.deepin.daemon.SoundEffect.service  com.deepin.daemon.SystemInfo.service  com.deepin.daemon.Timedate.service  com.deepin.dde.ControlCenter.service  com.deepin.dde.Dock.service  com.deepin.dde.Launcher.service  com.deepin.dde.Notification.service  com.deepin.dde.TrayManager.service  com.deepin.dde.daemon.Dock.service  com.deepin.dde.daemon.Launcher.service  com.deepin.dde.lockFront.service  com.deepin.dde.osd.service  com.deepin.dde.shutdownFront.service  org.deepin.api.XEventMonitor1.service  org.deepin.daemon.Appearance1.service  org.deepin.daemon.Audio1.service  org.deepin.daemon.Bluetooth1.service  org.deepin.daemon.LangSelector1.service  org.deepin.daemon.Power1.service  org.deepin.daemon.SoundEffect1.service  org.deepin.daemon.SystemInfo1.service  org.deepin.daemon.Timedate1.service  org.desktopspec.permission.service
misc/dbus/system-services/: com.deepin.daemon.Accounts.service  com.deepin.daemon.AirplaneMode.service  com.deepin.daemon.Gesture.service  com.deepin.daemon.Grub2.service  com.deepin.daemon.PasswdConf.service  com.deepin.daemon.PowerManager.service  com.deepin.daemon.Timedated.service  com.deepin.dde.LockService.service  com.deepin.lastore.service  com.deepin.system.Display.service  com.deepin.system.Network.service  com.deepin.system.Power.service  com.deepin.system.SystemInfo.service  org.deepin.daemon.Accounts1.service  org.deepin.daemon.Grub2.service  org.deepin.daemon.Timedated1.service  org.deepin.lastore1.service  org.deepin.system.Power1.service  org.deepin.system.SystemInfo1.service
misc/polkit-1/actions/: org.deepin.dde.api.proxy.policy
misc/systemd/system/: dde-api-dbus-proxy-v1.service  dde-api-dbus-proxy-v1@.service
misc/systemd/user/: dde-api-dbus-proxy-v1.service  dde-api-dbus-proxy-v1@.service
src/: CMakeLists.txt
src/dbus-proxy/: CMakeLists.txt
src/dbus-proxy/common/: dbusproxybase.hpp  deepinruntime.hpp
src/dbus-proxy/test-to-v0/: CMakeLists.txt  main.cpp
src/dbus-proxy/test-to-v0/session/: dbusdemo.hpp  dbusdemo2.hpp  dbusdemo2sub.hpp  soundeffect.hpp
src/dbus-proxy/test-to-v0/system/: com_deepin_daemon_Accounts.hpp  com_deepin_daemon_Accounts_User.hpp
src/dbus-proxy/v1/: CMakeLists.txt  main.cpp
src/dbus-proxy/v1/session/: main.cpp  org_deepin_dde_Appearance1.hpp  org_deepin_dde_Audio1.hpp  org_deepin_dde_Audio1_Sink.hpp  org_deepin_dde_Audio1_Source.hpp  org_deepin_dde_Bluetooth1.hpp  org_deepin_dde_ControlCenter1.hpp  org_deepin_dde_Display1.hpp  org_deepin_dde_Display1_Monitor.hpp  org_deepin_dde_Dock1.hpp  org_deepin_dde_InputDevice1_TouchPad.hpp  org_deepin_dde_InputDevice1_Wacom.hpp  org_deepin_dde_InputDevices1.hpp  org_deepin_dde_Keybinding1.hpp  org_deepin_dde_LangSelector1.hpp  org_deepin_dde_Launcher1.hpp  org_deepin_dde_LockFront1.hpp  org_deepin_dde_Mime1.hpp  org_deepin_dde_Network1.hpp  org_deepin_dde_Notification1.hpp  org_deepin_dde_Osd1.hpp  org_deepin_dde_Permission1.hpp  org_deepin_dde_Power1.hpp  org_deepin_dde_SessionManager1.hpp  org_deepin_dde_ShutdownFront1.hpp  org_deepin_dde_SoundEffect1.hpp  org_deepin_dde_StartManager1.hpp  org_deepin_dde_SystemInfo1.hpp  org_deepin_dde_Timedate1.hpp  org_deepin_dde_TrayManager1.hpp  org_deepin_dde_WMSwitcher1.hpp  org_deepin_dde_XEventMonitor1.hpp  org_deepin_dde_daemon_Dock1.hpp  org_deepin_dde_daemon_Dock1_Entry.hpp  org_deepin_dde_daemon_Launcher1.hpp  sessiondbusproxymanager.hpp
src/dbus-proxy/v1/system/: main.cpp  org_deepin_dde_Accounts1.hpp  org_deepin_dde_Accounts1_User.hpp  org_deepin_dde_AirplaneMode1.hpp  org_deepin_dde_Display1.hpp  org_deepin_dde_Gesture1.hpp  org_deepin_dde_Grub2.hpp  org_deepin_dde_Grub2_EditAuthentication.hpp  org_deepin_dde_Grub2_Theme.hpp  org_deepin_dde_Lastore1_Manager.hpp  org_deepin_dde_LockService1.hpp  org_deepin_dde_Network1.hpp  org_deepin_dde_PasswdConf1.hpp  org_deepin_dde_Power1.hpp  org_deepin_dde_SystemInfo1.hpp  org_deepin_dde_Timedate1.hpp  systemdbusproxymanager.hpp
toolGenerate/qdbusxml2cpp/: com.deepin.SessionManagerAdaptor.cpp  com.deepin.SessionManagerAdaptor.h  com.deepin.StartManagerAdaptor.cpp  com.deepin.StartManagerAdaptor.h  com.deepin.WMSwitcherAdaptor.cpp  com.deepin.WMSwitcherAdaptor.h  com.deepin.api.XEventMonitorAdaptor.cpp  com.deepin.api.XEventMonitorAdaptor.h  com.deepin.daemon.Accounts.UserAdaptor.cpp  com.deepin.daemon.Accounts.UserAdaptor.h  com.deepin.daemon.AccountsAdaptor.cpp  com.deepin.daemon.AccountsAdaptor.h  com.deepin.daemon.AppearanceAdaptor.cpp  com.deepin.daemon.AppearanceAdaptor.h  com.deepin.daemon.Audio.SinkAdaptor.cpp  com.deepin.daemon.Audio.SinkAdaptor.h  com.deepin.daemon.Audio.SourceAdaptor.cpp  com.deepin.daemon.Audio.SourceAdaptor.h  com.deepin.daemon.AudioAdaptor.cpp  com.deepin.daemon.AudioAdaptor.h  com.deepin.daemon.BluetoothAdaptor.cpp  com.deepin.daemon.BluetoothAdaptor.h  com.deepin.daemon.Display.MonitorAdaptor.cpp  com.deepin.daemon.Display.MonitorAdaptor.h  com.deepin.daemon.DisplayAdaptor.cpp  com.deepin.daemon.DisplayAdaptor.h  com.deepin.daemon.GestureAdaptor.cpp  com.deepin.daemon.GestureAdaptor.h  com.deepin.daemon.Grub2.EditAuthenticationAdaptor.cpp  com.deepin.daemon.Grub2.EditAuthenticationAdaptor.h  com.deepin.daemon.Grub2.ThemeAdaptor.cpp  com.deepin.daemon.Grub2.ThemeAdaptor.h  com.deepin.daemon.Grub2Adaptor.cpp  com.deepin.daemon.Grub2Adaptor.h  com.deepin.daemon.InputDevice.KeyboardAdaptor.cpp  com.deepin.daemon.InputDevice.KeyboardAdaptor.h  (+174 more)
(+73 files in other folders)
