
file(GLOB_RECURSE INSTALL_DBUS_CONF ${CMAKE_CURRENT_SOURCE_DIR}/dbus/conf/*.conf)
install(FILES ${INSTALL_DBUS_CONF} DESTINATION share/dbus-1/system.d/)

file(GLOB_RECURSE INSTALL_SYSTEMD_SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/systemd/system/*.service)
install(FILES ${INSTALL_SYSTEMD_SYSTEM} DESTINATION lib/systemd/system/)

file(GLOB_RECURSE INSTALL_SYSTEMD_USER ${CMAKE_CURRENT_SOURCE_DIR}/systemd/user/*.service)
install(FILES ${INSTALL_SYSTEMD_USER} DESTINATION lib/systemd/user/)